feat: Added logic for get profiles contacts and business
